// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Click to see all response 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Copy cohort scenario url 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Copy cohort scenario url 2`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Copy cohort scenario url 3`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              aria-label="Some Other Scenario is a group scenario"
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Run scenario as a participant
              </button>
              <button
                class="ui tiny button"
                data-testid="copy-cohort-scenario-link"
              >
                <i
                  aria-hidden="true"
                  class="clipboard outline icon primary"
                />
                Copy scenario link to clipboard
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Copy cohort scenario url 4`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              aria-label="Some Other Scenario is a group scenario"
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Run scenario as a participant
              </button>
              <button
                class="ui tiny button"
                data-testid="copy-cohort-scenario-link"
              >
                <i
                  aria-hidden="true"
                  class="clipboard outline icon primary"
                />
                Copy scenario link to clipboard
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Facilitator has an option to open scenarios selector 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Facilitator has an option to open scenarios selector 2`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Facilitator has an option to open scenarios selector 3`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Facilitator has an option to open scenarios selector 4`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`No scenarios in cohort 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`No scenarios in cohort 2`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        0
      </span>
       scenarios selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <p>
      There are no scenarios selected for this cohort.
    </p>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`No scenarios in cohort 3`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        0
      </span>
       scenarios selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <p>
      There are no scenarios selected for this cohort.
    </p>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`No scenarios returned from request 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`No scenarios returned from request 2`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div />
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`No scenarios returned from request 3`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div />
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Open Edit scenarios 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Open Edit scenarios 2`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Open Edit scenarios 3`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Open Edit scenarios 4`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Participant does not have an option to open scenarios selector 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Participant does not have an option to open scenarios selector 2`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        A New Cohort That Exists Within Inline Props
      </span>
       includes 
      <span>
        1
      </span>
       scenario
    </p>
    <div
      class="ui card c__scenario-card"
      style="cursor: auto;"
    >
      <div
        class="content"
      >
        <div
          class="header"
        >
          <i
            aria-hidden="true"
            class="users icon primary"
          />
          Some Other Scenario
        </div>
        <div
          class="description"
        >
          <p>
            This is the description of 'Some Other Scenario'…
          </p>
        </div>
        <div
          class="meta"
        >
          Finished a year ago (03/31/2020).
        </div>
        <div
          class="meta"
        >
          <button
            class="ui tiny button"
            data-testid="run-cohort-as-participant"
          >
            <i
              aria-hidden="true"
              class="play icon primary"
            />
            Create or join a room to re-run scenario
          </button>
        </div>
      </div>
      <div
        class="c__scenario-extra"
      >
        <button
          class="ui large primary button"
          data-testid="view-cohort-responses"
          name="Some Other Scenario"
        >
          View reponses
        </button>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 1 1 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 1 1 2`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Render 2 1 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render 2 1 2`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Run as participant 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Run as participant 2`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Run as participant 4`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Scenarios have multi-participant/single-participant icons 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    aria-live="polite"
    class="ui card loading__single-card"
    role="status"
    style="width: 100%; height: 90%;"
  >
    <div
      aria-hidden="true"
      class="content loading__content"
    >
      <div
        class="ui placeholder"
      >
        <div
          class="square image"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Scenarios have multi-participant/single-participant icons 2`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Scenarios have multi-participant/single-participant icons 3`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;

exports[`Scenarios have multi-participant/single-participant icons 4`] = `
<DocumentFragment>
  <div
    class="ui fluid container c__scenario-container"
  >
    <p
      class="c__scenario-header-num"
    >
      <span>
        1
      </span>
       scenario selected
    </p>
    <p>
      <button
        class="ui tiny button"
      >
        Edit selected scenarios
      </button>
    </p>
    <div
      class="c__scenario-list"
    >
      <div>
        <div
          class="ui card c__scenario-card"
          style="cursor: move;"
        >
          <div
            class="content"
          >
            <div
              class="header"
            >
              <i
                aria-hidden="true"
                class="users icon primary"
              />
              Some Other Scenario
            </div>
            <div
              class="description"
            >
              <p>
                This is the description of 'Some Other Scenario'…
              </p>
            </div>
            <div
              class="meta"
            >
              <button
                class="ui tiny button"
                data-testid="run-cohort-as-participant"
              >
                <i
                  aria-hidden="true"
                  class="play icon primary"
                />
                Create or join a room to re-run scenario
              </button>
            </div>
          </div>
          <div
            class="c__scenario-extra"
          >
            <button
              class="ui large primary button"
              data-testid="view-cohort-responses"
              name="Some Other Scenario"
            >
              View reponses
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-testid="cohort-scenarios"
    />
  </div>
</DocumentFragment>
`;
